==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/Nordic/tommRoCHwTemplateBusEnvironmentUART.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentUART.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFO.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFOCb.h"
#include "bus/env/arm/Nordic/uart/tommRoCHwTemplateBusUARTNordicHal.h"
#include "nrfx_uart.h"
#include <stdbool.h>
#define __DEFAULT_BAUDRATE__            (NRF_UART_BAUDRATE_115200)
#define __DEFAULT_TXD_PIN_NUM__         (NRF_UART_PSEL_DISCONNECTED)
#define __DEFAULT_RXD_PIN_NUM__         (NRF_UART_PSEL_DISCONNECTED)
#define __EMPTY___tommRoC_hw_uart_config_t____                              \
{                                                                           \
    /* .buffer */       __EMPTY_tommRoC_hw_template_bus_uart_buffer_t__,    \
    /* .baudRate */     __DEFAULT_BAUDRATE__,                               \
    /* .pselTXD */      __DEFAULT_TXD_PIN_NUM__,                            \
    /* .pselRXD */      __DEFAULT_RXD_PIN_NUM__,                            \
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUARTSetProp(
        const   tommRoC_hw_template_bus_uart_prop_enum_t            property,
        const   tommRoC_hw_template_bus_uart_enum_t                 bus,
        const   void*                                       const   propValuePtr) {

    switch (property) {

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_BUFFER:
        return _set_buffer(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_BAUD_RATE:
        return _set_baudrate(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_TX_PIN:
        return _set_psel_txd(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_RX_PIN:
        return _set_psel_rxd(bus, propValuePtr);

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_uart_nordic_hal_config_t halConfig;

    halConfig.nrfxUart.p_reg        = NRF_UART0;
    halConfig.nrfxUart.drv_inst_idx = NRFX_UART0_INST_IDX;
    halConfig.baudRate              = _uart_config_0.baudRate;
    halConfig.pselTXD               = _uart_config_0.pselTXD;
    halConfig.pselRXD               = _uart_config_0.pselRXD;
    halConfig.nrfxUartEventHandler  = _nrfx_uart0_event_handler;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusUARTNordicHalInit(&halConfig));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(
            tommRoCHwTemplateBusCommonUARTFIFOInit(
                    &_uart_config_0.buffer,
                    &_uart_handle_0.txUARTFifo,
                    &_uart_handle_0.rxUARTFifo));

    _UART0_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&_uart_handle_0.nrfxUart, &halConfig.nrfxUart, sizeof(nrfx_uart_t)));

    // If RX pin is connected, turn on receiver and start receives byte in non blocking mode
    if (NRF_UART_PSEL_DISCONNECTED != _uart_config_0.pselRXD) {

        // Turn ON receiver
        if (NRFX_SUCCESS != nrfx_uart_rx(&_uart_handle_0.nrfxUart, &_uart_handle_0.rxByte, sizeof(_uart_handle_0.rxByte))) {
            return TOMMRO_C_HW_LOW_LEVEL_ERR;
        }
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}
