==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/SiLabs/tommRoCHwTemplateBusEnvironmentUART.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentUART.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFO.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFOCb.h"
#include "bus/env/arm/SiLabs/uart/tommRoCHwTemplateBusUARTSiLabsHal.h"
#include "bus/env/arm/SiLabs/uart/tommRoCHwTemplateBusUARTSiLabsLocation.h"
#include "em_usart.h"
#include "em_leuart.h"
#include <stdbool.h>
#define __DEFAULT_BAUDRATE__        (115200)
#define __EMPTY___tommRoC_hw_uart_config_t____                                          \
{                                                                                       \
    /* .buffer */           __EMPTY_tommRoC_hw_template_bus_uart_buffer_t__,            \
    /* .baudRate */         __DEFAULT_BAUDRATE__,                                       \
    /* .siLabsLocation */   __EMPTY_tommRoC_hw_template_bus_uart_silabs_location_t__,   \
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUARTSetProp(
        const   tommRoC_hw_template_bus_uart_prop_enum_t            property,
        const   tommRoC_hw_template_bus_uart_enum_t                 bus,
        const   void*                                       const   propValuePtr) {

    switch (property) {

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_BUFFER:
        return _set_buffer(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_BAUD_RATE:
        return _set_baudrate(bus, propValuePtr);

#if defined (_USART_ROUTE_LOCATION_MASK)
    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_LOCATION:
        return _set_location(bus, propValuePtr);
#endif

#if defined (_GPIO_USART_ROUTEEN_RESETVALUE)
    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_TX_PORT:
        return _set_tx_port(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_RX_PORT:
        return _set_rx_port(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_TX_PIN:
        return _set_tx_pin(bus, propValuePtr);

    case TOMMRO_C_HW_TEMPLATE_BUS_UART_PROP_RX_PIN:
        return _set_rx_pin(bus, propValuePtr);
#endif

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);
        break;
    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_0_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_0_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _uart_handle_0.txBufferPtr  = txBuffer;
    _uart_handle_0.txBufferSize = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_0_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

    tommRoC_hw_template_bus_uart_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_USART0;
    halConfig.usartPtr  = (void*) USART0;
    halConfig.baudRate  = _uart_config_0.baudRate;
    halConfig.rxIRQn    = USART0_RX_IRQn;
    halConfig.txIRQn    = USART0_TX_IRQn;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_uart_config_0.siLabsLocation, sizeof(tommRoC_hw_template_bus_uart_silabs_location_t)));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(tommRoCHwTemplateBusUARTSiLabsHalInit(&halConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusCommonUARTFIFOInit(
                    &_uart_config_0.buffer,
                    &_uart_handle_0.txUARTFifo,
                    &_uart_handle_0.rxUARTFifo));

    _EUSART0_get_callback_ARM(cbFunctPtr);

    tommRoCHwTemplateBusUARTSiLabsHalRxIRQEnable((USART_TypeDef*) halConfig.usartPtr);

    _uart_handle_0.usartPtr = halConfig.usartPtr;
    _uart_handle_0.txIRQn   = halConfig.txIRQn;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
